--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -13,8 +13,8 @@
     --main-font: ibm-plex-mono, sans-serif;
     --main-font-size: 0.8rem;
     --small: 0.7rem;
-    --highlight-text-color: #fe4747;
-    --link-color: #5a78ff;
+    --highlight-text-color: #6e1fff;
+    --link-color: #694dff;
     --meta-font: ibm-plex-mono, sans-serif;
     --grey: #666;
     --highlight-color: #fec1ee;
@@ -23,6 +23,7 @@
     --purple: #694dff;
     --border-radius: 24px;
     --box-shadow: 0 0 0 1px rgb(0 0 0 / 5%), 0 1px 4px rgb(0 0 0 / 10%);
+    --link-hover-color: rgba(90, 120, 255, 1);
 }
 
 /* //=== BASIC STYLING === // */
@@ -60,6 +61,10 @@ a:focus {
     margin: 1rem 0;
     text-align: center;
     transition: 1s;
+}
+
+p {
+    margin: 0.7rem auto;
 }
 
 button,
@@ -106,7 +111,7 @@ input:focus {
 h2,
 h3 {
     margin: 1rem auto;
-    font-style: italic;
+
     font-family: var(--header-font);
     text-transform: capitalize;
     font-size: 1.6rem;
@@ -124,12 +129,21 @@ body {
 
 #app,
 #registration {
+    margin: 8rem 2rem 0;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     min-height: 80vh;
+}
+
+#main {
+    width: 75%;
+    min-width: 500px;
+    max-width: 600px;
+    margin: 0 2rem;
+    padding: 2rem;
 }
 
 /* Registration  */
