--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -67,6 +67,9 @@ p {
     margin: 0.7rem auto;
 }
 
+textarea,
+select,
+option,
 button,
 input,
 .file-upload {
@@ -129,7 +132,7 @@ body {
 
 #app,
 #registration {
-    margin: 8rem 2rem 0;
+    margin: 6rem 2rem 0;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
