--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -24,6 +24,7 @@
     --border-radius: 24px;
     --box-shadow: 0 0 0 1px rgb(0 0 0 / 5%), 0 1px 4px rgb(0 0 0 / 10%);
     --link-hover-color: rgba(90, 120, 255, 1);
+    --meta-color: #666;
 }
 
 /* //=== BASIC STYLING === // */
