--- a/client/src/css/playlists.css
+++ b/client/src/css/playlists.css
@@ -77,9 +77,11 @@ h3 {
 
 #playlist-selector {
     /* margin-top: 1rem; */
-    /* border: 1px solid black; */
+    border: 1px solid black;
     /* height: 40vw; */
     width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .search-list {
@@ -120,22 +122,26 @@ h3 {
 }
 
 .button-wrapper {
+    margin: 0 auto;
+    width: 400px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 select {
-    width: 50%;
+    width: 40%;
 }
 
 .add-more {
-    width: 50%;
+    width: 40%;
+    margin: 0;
 }
 
 .finish-button {
+    margin: 0;
     color: var(--link-hover-color);
 
-    width: 150px;
+    /* width: 150px; */
 }
 
 .single-items {
@@ -165,4 +171,18 @@ select {
     margin: 0.5rem;
     width: 50px;
     height: auto;
+}
+
+li {
+    list-style-type: none;
+}
+
+.garbage {
+    cursor: pointer;
+}
+
+.preview-image {
+    width: 60px;
+    height: 80px;
+    object-fit: cover;
 }
