--- a/client/src/css/logout.css
+++ b/client/src/css/logout.css
@@ -1,11 +1,13 @@
 #logout {
-    position: fixed;
-    padding: 0 2rem;
-    bottom: 10px;
-    right: 0;
-    width: 25%;
+    width: 100%;
+    padding: 1rem 2rem;
 }
 
 .logout {
-    color: #aaa;
+    color: black;
+    border: 0px;
+    font-size: 2rem;
+    font-family: var(--main-font);
+    padding: 2rem 2rem;
+    width: 50%;
 }
