--- a/client/src/css/playlists.css
+++ b/client/src/css/playlists.css
@@ -13,17 +13,18 @@
     justify-content: center;
     align-items: center;
     padding: 1rem;
-    width: 80%;
+    width: 550px;
 }
 
 .forms > input {
     width: 100%;
+    padding: 0.2rem;
 }
 
 .labels {
     color: var(--main-text-color);
     font-size: 0.8rem;
-    margin: 0 1rem;
+    margin: 0.2rem 1rem;
 }
 
 li {
@@ -37,6 +38,7 @@ textarea {
     white-space: normal;
     resize: none;
     line-height: normal;
+    padding: 1rem;
 }
 
 textarea:focus {
@@ -123,7 +125,7 @@ h3 {
 }
 
 .search-list li:hover {
-    background-color: var(--highlight-color);
+    background-color: var(--color2);
 }
 
 .small {
@@ -153,26 +155,20 @@ select {
 
 .single-items {
     flex-wrap: wrap;
-    border: 1px solid red;
 }
 
 .preview-wrapper {
-    margin: 4rem 0;
     width: 100%;
-
-    /* border: 1px solid black; */
 }
 
 .preview-wrapper > h2 {
-    /* flex-grow: 3;
-    text-align: center;
     font-size: 0.9rem;
-    color: var(--meta-color); */
+    color: var(--meta-color);
 }
 
 .preview {
-    /* display: flex;
-    margin: 1rem; */
+    display: flex;
+    margin: 1rem;
 }
 
 .single-items > img {
@@ -282,6 +278,8 @@ h4 {
     background: url("../mixtape2.jpg");
     background-size: cover;
     position: relative;
+    width: 230px;
+    height: 160px;
 }
 
 .mixtape3 {
@@ -293,29 +291,50 @@ h4 {
     color: black;
 }
 
-.mixtape1 > p.mixtape-title2 {
-    color: var(--color3);
-    background-color: rgba(255, 249, 240, 0.5);
-    transform: rotate(1deg);
-}
-
-.mixtape3 > p.mixtape-title2 {
-    color: --var(color1);
-    background-color: var(--highlight-color);
-    left: 40px;
-    transform: rotate(3deg);
-}
-
-.mixtape-title2 {
-    transform: rotate(-1deg);
+p.mixtape-title2 {
+    background: black;
+    color: white;
+    letter-spacing: 0.3rem;
+    font-weight: bold;
+    font-family: var(--meta-font);
+    font-size: 0.5rem;
     width: 150px;
     height: auto;
-    font-family: var(--handwriting1);
-    background-color: rgba(255, 243, 225, 0.5);
     position: absolute;
     top: 80px;
     left: 28px;
     text-align: center;
+    transition: 0.5s;
+}
+
+p.mixtape-title2:hover {
+    background: white;
+    transition: 0.5s;
+}
+
+p.mixtape-title2 a {
+    color: white;
+    font-weight: 300;
+    font-size: 0.6rem;
+}
+
+p.mixtape-title2 a:hover {
+    color: var(--highlight-color);
+}
+
+.mixtape1 > p.mixtape-title2 {
+    transform: rotate(1deg);
+}
+
+.mixtape2 > p.mixtape-title2 {
+    top: 6rem;
+    transform: rotate(1deg);
+}
+
+.mixtape3 > p.mixtape-title2 {
+    left: 30px;
+    top: 30px;
+    transform: rotate(-3deg);
 }
 
 .mixtape1 > .name-sticker {
