--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Just+Me+Again+Down+Here&family=Patrick+Hand+SC&display=swap");
 
 * {
     box-sizing: border-box;
@@ -29,7 +30,8 @@
     --link-hover-color: #ef233e;
     --meta-color: #666;
     --error-color: #ef233e;
-    --handwriting1: Arial;
+    --handwriting1: "Patrick Hand SC", cursive;
+    --handwriting2: "Just Me Again Down Here", cursive;
 }
 
 /* //=== BASIC STYLING === // */
