--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -116,7 +116,7 @@ button:hover,
 
 button:focus,
 input:focus {
-    border: 1px solid var(--color2);
+    border-bottom: 1px solid var(--highlight-color);
     color: var(--color2);
 }
 
@@ -159,6 +159,21 @@ body {
 
 .highlight {
     color: var(--main-text-color);
+}
+
+.intro {
+    margin: 0;
+    padding: 0;
+}
+
+.user-name {
+    color: blue;
+    font-weight: 400;
+}
+
+.user-name:hover {
+    color: black;
+    font-weight: 400;
 }
 
 #app {
