--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -79,7 +79,9 @@ p {
 }
 
 h1 {
-    margin-top: 2rem;
+    margin: 2rem auto 1rem;
+    font: var(--main-font);
+    font-size: 1.3rem;
 }
 
 textarea,
@@ -91,7 +93,7 @@ input,
     transition: 0.5s;
     margin: 0.1rem auto;
     height: 36px;
-    text-align: center;
+  
     outline: none;
     height: auto;
     line-height: 32px;
@@ -121,9 +123,10 @@ input:focus {
 }
 
 button {
-    width: 120px;
+    min-width: 120px;
     border: 0px;
     margin-top: 1rem;
+    padding: 0;
     border-bottom: 1px solid var(--highlight-color);
 }
 
@@ -211,24 +214,29 @@ body {
     margin: 1rem 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
 hr {
     width: 600px;
 }
-
+/* 
 label,
 .signup-button {
     margin: 0 1rem;
+} */
+
+.signup-button {
+    width: 100%;
+    text-align: left;
 }
 
 .registration-links {
     margin: 1rem 0;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+    display: block;
+    
 }
 
 .registration-links a {
@@ -245,4 +253,17 @@ label,
     font-size: 0.7rem;
     color: var(--color2);
     border: 0px;
+}
+
+.twitter {
+    color: #56ADEE;
+    text-align: left;
+    margin: 0;
+}
+
+a.twitter:hover {
+    
+    animation: shakeX; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 1s; /* don't forget to set a duration! */
+
 }
